--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
       <div class="uk-navbar-left">
         <ul class="uk-navbar-nav">
           <li class="uk-active"><a href="">Scan Item</a></li>
-          <li class="uk-parent"><a href="/additem.html">Add Item</a></li>
-          <li><a href="">Item List</a></li>
+          <li><a href="pages/additem.html">Add Item</a></li>
+          <li><a href="pages/itemList.html">Item List</a></li>
         </ul>
       </div>
     </nav>
