--- a/pages/additem.html
+++ b/pages/additem.html
@@ -4,15 +4,15 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="color-scheme" content="dark light" />
-    <link rel="icon" href="./icon.png" />
+    <link rel="icon" href="../icon.png" />
     <title>Inv App</title>
-    <link rel="stylesheet" href="./styles/main.css" />
-    <link rel="stylesheet" href="./styles/uikit/uikit.min.css" />
-    <link rel="manifest" href="./manifest.json" />
-    <script src="./js/index.js" type="module"></script>
-    <script src="./js/addItem.js" type="module"></script>
-    <script src="./js/uikit/uikit.min.js"></script>
-    <script src="./js/uikit/uikit-icons.min.js"></script>
+    <link rel="stylesheet" href="../styles/main.css" />
+    <link rel="stylesheet" href="../styles/uikit/uikit.min.css" />
+    <link rel="manifest" href="../manifest.json" />
+    <script src="../js/index.js" type="module"></script>
+    <script src="../js/addItem.js" type="module"></script>
+    <script src="../js/uikit/uikit.min.js"></script>
+    <script src="../js/uikit/uikit-icons.min.js"></script>
   </head>
   <body>
     <!-- Navbar-->
@@ -20,8 +20,8 @@
       <div class="uk-navbar-left">
         <ul class="uk-navbar-nav">
           <li><a href="/">Scan Item</a></li>
-          <li class="uk-active"><a href="">Add Item</a></li>
-          <li><a href="">Item List</a></li>
+          <li class="uk-active"><a href="/additem.html">Add Item</a></li>
+          <li><a href="itemlist.html">Item List</a></li>
         </ul>
       </div>
     </nav>
