--- a/pages/additem.html
+++ b/pages/additem.html
@@ -9,13 +9,9 @@
     <link rel="stylesheet" href="../styles/main.css" />
     <link rel="stylesheet" href="../styles/uikit/uikit.min.css" />
     <link rel="manifest" href="../manifest.json" />
-
     <script src="https://unpkg.com/dexie/dist/dexie.js"></script>
-
     <script src="../js/index.js" type="module"></script>
     <script src="../js/addItem.js" type="module"></script>
-    <script src="../js/uikit/uikit.min.js"></script>
-    <script src="../js/uikit/uikit-icons.min.js"></script>
   </head>
   <body>
     <!-- Navbar-->
@@ -119,7 +115,10 @@
           <a href="/" class="uk-button uk-button-danger uk-margin-left">
             Cancel
           </a>
-          <button class="uk-button uk-button-primary" id="syncButton">
+          <button
+            class="uk-button uk-button-primary uk-margin-left"
+            id="syncButton"
+          >
             Sync Items
           </button>
         </div>
